logging/database.log
2020-01-02 21:46:45,115:database.Database:relation "agency" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 93, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency" already exists

2020-01-02 21:52:44,006:database.Database:relation "agency" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 93, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency" already exists

2020-01-02 21:52:58,218:database.Database:cursor already closed
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 93, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.InterfaceError: cursor already closed
2020-01-02 21:54:23,710:database.Database:relation "agency1" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 93, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency1" already exists

2020-01-02 21:55:27,605:database.Database:relation "agency1" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 93, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency1" already exists

2020-01-02 22:00:01,203:database.Database:relation "agency1" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 94, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency1" already exists

2020-01-02 22:01:03,162:database.Database:relation "agency1" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 96, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency1" already exists

2020-01-02 22:02:21,672:database.Database:relation "agency" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 97, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency" already exists

2020-01-02 22:03:44,911:database.Database:relation "agency" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 97, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency" already exists

2020-01-02 22:05:08,742:database.Database:relation "agency" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 97, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency" already exists

2020-01-02 22:05:44,006:database.Database:relation "agency" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 97, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency" already exists

2020-01-02 22:23:10,444:database.Database:invalid dsn: invalid connection option "database"
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 93, in create_tables
    self.conn = psycopg2.connect('database={}'.format(db['database']))
  File "/Users/kentah/Code/appdev/logjam2/logjamEnv/lib/python3.8/site-packages/psycopg2/__init__.py", line 125, in connect
    dsn = _ext.make_dsn(dsn, **kwargs)
  File "/Users/kentah/Code/appdev/logjam2/logjamEnv/lib/python3.8/site-packages/psycopg2/extensions.py", line 152, in make_dsn
    parse_dsn(dsn)
psycopg2.ProgrammingError: invalid dsn: invalid connection option "database"

2020-01-02 22:50:02,621:database.Database:relation "agency" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 77, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency" already exists

2020-01-04 14:34:36,462:database.Database:syntax error at or near "CREATE"
LINE 3:     CREATE TABLE contacts(
            ^
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 77, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.SyntaxError: syntax error at or near "CREATE"
LINE 3:     CREATE TABLE contacts(
            ^

2020-01-04 14:36:24,069:database.Database:relation "agency" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 77, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency" already exists

2020-01-04 14:37:37,440:database.Database:syntax error at or near "PRIMSRY"
LINE 3:         id SERIAL PRIMSRY KEY,
                          ^
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 77, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.SyntaxError: syntax error at or near "PRIMSRY"
LINE 3:         id SERIAL PRIMSRY KEY,
                          ^

2020-01-04 14:52:34,262:database.Database:syntax error at or near "TABLE"
LINE 2:     INSERT INTO TABLE agency(
                        ^
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 97, in populate_dummy_data
    logger.debug(self.cursor.execute(d))
psycopg2.errors.SyntaxError: syntax error at or near "TABLE"
LINE 2:     INSERT INTO TABLE agency(
                        ^

2020-01-04 14:53:31,702:database.Database:numeric field overflow
DETAIL:  A field with precision 2, scale 2 must round to an absolute value less than 1.
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 97, in populate_dummy_data
    logger.debug(self.cursor.execute(d))
psycopg2.errors.NumericValueOutOfRange: numeric field overflow
DETAIL:  A field with precision 2, scale 2 must round to an absolute value less than 1.

2020-01-04 15:58:02,291:database.Database:syntax error at or near "s_id"
LINE 4:         s_id INTEGER,
                ^
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 77, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.SyntaxError: syntax error at or near "s_id"
LINE 4:         s_id INTEGER,
                ^

2020-01-04 17:30:32,496:database.Database:syntax error at or near "CHAR"
LINE 9:         run_day CHAR(2),l
                        ^
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 77, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.SyntaxError: syntax error at or near "CHAR"
LINE 9:         run_day CHAR(2),l
                        ^

2020-01-04 17:31:14,457:database.Database:syntax error at or near "INTEGER"
LINE 11:         catNum INTEGER,
                        ^
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 77, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.SyntaxError: syntax error at or near "INTEGER"
LINE 11:         catNum INTEGER,
                        ^

2020-01-04 17:32:24,124:database.Database:syntax error at or near "order"
LINE 2:     CREATE TABLE order(
                         ^
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 77, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.SyntaxError: syntax error at or near "order"
LINE 2:     CREATE TABLE order(
                         ^

2020-01-04 17:33:38,350:database.Database:syntax error at or near "DEFULT"
LINE 10:         pi BOOLEAN DEFULT false,
                            ^
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 77, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.SyntaxError: syntax error at or near "DEFULT"
LINE 10:         pi BOOLEAN DEFULT false,
                            ^

2020-01-04 17:34:43,992:database.Database:relation "agency" already exists
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 77, in create_tables
    logger.debug(self.cursor.execute(t))
psycopg2.errors.DuplicateTable: relation "agency" already exists

2020-01-04 18:08:34,755:database.Database:column "commisssion" of relation "client" does not exist
LINE 3:         name, address, a_id, commisssion
                                     ^
Traceback (most recent call last):
  File "/Users/kentah/Code/appdev/logjam2/database/Database.py", line 97, in populate_dummy_data
    logger.debug(self.cursor.execute(d))
psycopg2.errors.UndefinedColumn: column "commisssion" of relation "client" does not exist
LINE 3:         name, address, a_id, commisssion
                                     ^

